ecmascript/parser/tests/test262-error-references/fail/4c3f75c2ad9dc102.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/4c3f75c2ad9dc102.js:1:11
  |
1 | ({ set: s(if) { } })
  |           ^^

